update see more

--- a/seemore.html
+++ b/seemore.html
@@ -90,7 +90,7 @@
     </nav>
     <div class="travel-guide-container">
       <div class="row">
-        <div class="col-7 pe-5">
+        <div class="col">
           <div class="head">
             <div><span>ខេត្ត/តំបន់</span></div>
           </div>
@@ -136,11 +136,85 @@
               </p>
             </div>
           </div>
-          <div class="btn-readmore">
-            <a href="javascript:;" class="clv_btn">See More...</a>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">សៀមរាប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
           </div>
         </div>
-        <div class="col-5">
+        <div class="col">
             <div class="head">
                 <div><span>ខេត្ត/តំបន់</span></div>
               </div>
@@ -186,102 +260,165 @@
                   </p>
                 </div>
               </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+              <div class="area d-flex">
+                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <div class="area-description">
+                  <a class="area-title">សៀមរាប</a>
+                  <p class="area-short-description">
+                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                  </p>
+                </div>
+              </div>
+
         </div>
       </div>
     </div>
-    <div class="top-3-place container">
-      <p class="top-3-place-title text-center my-5">
-        <span class="txt-top-place-title">កន្លែងពេញនិយមទាំង</span> <span class="num-top-place-title">៣</span>
-      </p>
-      <div class="row">
-        <div class="col-12 col-md-4">
-          <div class="card" style="width: 100%;">
-            <img src="images/kampi.jpg" class="card-img-top" alt="ព្រែកកាំពី">
-            <div class="card-body">
-              <p class="card-title text-center">ព្រែកកាំពី</p>
-              <p class="card-subtitle text-center">ខេត្តក្រចេះ</p>
-              <p class="card-description mt-3">
-                ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ ឃុំសំបុក ស្រុកចិត្របុរី ខេត្តក្រចេះ។
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card" style="width: 100%;">
-            <img src="images/kampi.jpg" class="card-img-top" alt="ព្រែកកាំពី">
-            <div class="card-body">
-              <p class="card-title text-center">ព្រែកកាំពី</p>
-              <p class="card-subtitle text-center">ខេត្តក្រចេះ</p>
-              <p class="card-description mt-3">
-                ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ ឃុំសំបុក ស្រុកចិត្របុរី ខេត្តក្រចេះ។
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card" style="width: 100%;">
-            <img src="images/kampi.jpg" class="card-img-top" alt="ព្រែកកាំពី">
-            <div class="card-body">
-              <p class="card-title text-center">ព្រែកកាំពី</p>
-              <p class="card-subtitle text-center">ខេត្តក្រចេះ</p>
-              <p class="card-description mt-3">
-                ជារមណីយដ្ឋានធម្មជាតិ ស្ថិតនៅលើដងទន្លេមេគង្គចម្ងាយ ១៦ គ.ម តាមផ្លូវលេខ៣៧៧ ខាងជើងទីរួមខេត្ត មានទីតាំងស្ថិតនៅភូមិក្បាលជួរ ឃុំសំបុក ស្រុកចិត្របុរី ខេត្តក្រចេះ។
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="country-food container">
-      <div class="header-title d-flex justify-content-between align-items-center w-100 mt-4">
-        <p class="left-title">មុខម្ហូបល្បីប្រចាំ ខេត្ត/ក្រុង</p>
-        <label class="right-show-more">
-          មើលបន្ថែម
-        </label>
-      </div>
-      <div class="list-foods row mt-4">
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img">
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img">
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img">
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img">
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img">
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img">
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img">
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">ព្រៃវែង</p>
-          <img src="images/food/kreak.png" alt="" class="food-img">
-          <p class="food-name m-0 text-center">សម្លគ្រាក់</p>
-        </div>
-      </div>
-    </div>
+    
     <footer>
       <div class="container">
         <div class="footer-header d-flex justify-content-center align-items-center gap-4 py-4">
