--- a/seemore.html
+++ b/seemore.html
@@ -95,13 +95,13 @@
             <div><span>ខេត្ត/តំបន់</span></div>
           </div>
           <div class="area d-flex">
-            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <img src="images/Cambodia/ភ្នំពេញ.jpg" alt="">
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title">ភ្នំពេញ</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
-                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...see more
               </p>
             </div>
           </div>
@@ -126,9 +126,9 @@
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <img src="images/Cambodia/បាត់ដំបង.jpg" alt="">
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title">បាត់ដំបង</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -137,9 +137,9 @@
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <img src="images/Cambodia/ព្រៃវែង.jpg" alt="">
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title">ព្រៃវែង</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -148,9 +148,9 @@
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <img src="images/Cambodia/កំពង់ធំ.jpg" alt="">
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title">កំពង់ធំ</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -159,9 +159,9 @@
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <img src="images/Cambodia/តាកែវ.jpg" alt="">
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title">តាកែវ</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -170,9 +170,9 @@
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <img src="images/Cambodia/មណ្ដលគិរី.jpg" alt="">
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title">មណ្ឌលគិរី</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -181,9 +181,9 @@
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <img src="images/Cambodia/រតនៈគិរី.pjg.jpeg" alt="">
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title">រតនៈគិរី</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -192,9 +192,9 @@
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <img src="images/Cambodia/ឧត្តមានជ័យ.jpg" alt="">
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title">ឧត្ដមានជ័យ</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -203,9 +203,31 @@
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Ankor_Wat_temple.jpg" alt="">
+            <img src="images/Cambodia/កែប.jpg" alt="">
             <div class="area-description">
-              <a class="area-title">សៀមរាប</a>
+              <a class="area-title">កែប</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Cambodia/ស្ទឹងត្រែង.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">ស្ទឹងត្រែង</a>
+              <p class="area-short-description">
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
+              </p>
+            </div>
+          </div>
+          <div class="area d-flex">
+            <img src="images/Cambodia/ព្រះវិហារ.jpg" alt="">
+            <div class="area-description">
+              <a class="area-title">ព្រះវិហារ</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -219,9 +241,9 @@
                 <div><span>ខេត្ត/តំបន់</span></div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/កោះកុង.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">កោះកុង</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -230,18 +252,18 @@
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Cambodia/កំពង់ឆ្នាំង.jpg" alt="">
+                <img src="images/Cambodia/ព្រះវិហារ.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">កំពង់ឆ្នាំង</a>
+                  <a class="area-title">ព្រះសីហនុ</a>
                   <p class="area-short-description">
                     ជាខេត្តមួយស្ថិតនៅភាគកណ្តាលនៃប្រទេសកម្ពុជា។ ខេត្តកំពង់ឆ្នាំងជាខេត្តល្បីខាងផលិតក្អមឆ្នាំងមានគុណភាពល្អអំពីដី។ខេត្តជិតខាងគឺ(ពីខាងជើងតាមទ្រនិចនាឡិកាវិល)កំពង់ធំកំពង់ចាមកណ្ដាល កំពង់ស្ពឺ និង ពោធិ៍សាត់។ក្រុងទីរួមខេត្តកំពង់ឆ្នាំងគឺក្រុងកំពង់ឆ្នាំង។
                   </p>
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/កំពង់ស្ពឺ.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">កំពង់ស្ពឺ</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -250,9 +272,9 @@
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/កំពង់ចាម.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">កំពង់ចាម</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -261,9 +283,9 @@
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/បន្ទាយមានជ័យ.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">បន្ទាយមានជ័យ</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -272,9 +294,9 @@
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/កណ្ដាល.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">កណ្ដាល</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -283,9 +305,9 @@
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/ក្រចេះ.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">ក្រចេះ</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -294,9 +316,9 @@
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/ប៉ៃលិន.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">ប៉ៃលិន</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -305,9 +327,9 @@
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/ត្បូងឃ្មុំ.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">ត្បូងឃ្មុំ</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -316,9 +338,9 @@
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/ពោធិ៍សាត់.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">ពោធិ៍សាត់</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -327,9 +349,9 @@
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/ស្វាយរៀង.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">ស្វាយរៀង</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
@@ -338,83 +360,15 @@
                 </div>
               </div>
               <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
+                <img src="images/Cambodia/កំពត.jpg" alt="">
                 <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
+                  <a class="area-title">កំពត</a>
                   <p class="area-short-description">
                     អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                     ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
                     ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
                   </p>
-                </div>
-              </div>
-              <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
-                <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
-                  <p class="area-short-description">
-                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
-                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
-                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
-                  </p>
-                </div>
-              </div>
-              <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
-                <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
-                  <p class="area-short-description">
-                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
-                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
-                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
-                  </p>
-                </div>
-              </div>
-              <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
-                <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
-                  <p class="area-short-description">
-                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
-                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
-                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
-                  </p>
-                </div>
-              </div>
-              <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
-                <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
-                  <p class="area-short-description">
-                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
-                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
-                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
-                  </p>
-                </div>
-              </div>
-              <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
-                <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
-                  <p class="area-short-description">
-                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
-                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
-                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
-                  </p>
-                </div>
-              </div>
-              <div class="area d-flex">
-                <img src="images/Ankor_Wat_temple.jpg" alt="">
-                <div class="area-description">
-                  <a class="area-title">សៀមរាប</a>
-                  <p class="area-short-description">
-                    អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
-                    ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
-                    ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
-                  </p>
-                </div>
-              </div>
-
+                </div> 
         </div>
       </div>
     </div>
