--- a/seemore.html
+++ b/seemore.html
@@ -90,7 +90,7 @@
     </nav>
     <div class="travel-guide-container">
       <div class="row">
-        <div class="col-7 pe-5">
+        <div class="col">
           <div class="head">
             <div><span>ខេត្ត/តំបន់</span></div>
           </div>
@@ -140,7 +140,7 @@
             <a href="javascript:;" class="clv_btn">See More...</a>
           </div>
         </div>
-        <div class="col-5">
+        <div class="col">
             <div class="head">
                 <div><span>ខេត្ត/តំបន់</span></div>
               </div>
