--- a/index.html
+++ b/index.html
@@ -131,18 +131,22 @@
             </div>
           </div>
           <div class="area d-flex">
+            <div class="col-">
             <img src="images/Cambodia/កំពង់ឆ្នាំង.jpg" alt="">
+          </div>
             <div class="area-description">
               <a class="area-title">កំពង់ឆ្នាំង</a>
               <p class="area-short-description">
-                ជាខេត្តមួយស្ថិតនៅភាគកណ្តាលនៃប្រទេសកម្ពុជា។ 
-                ខេត្តកំពង់ឆ្នាំងជាខេត្តល្បីខាងផលិតក្អមឆ្នាំងមានគុណភាពល្អអំពីដី។
-                ខេត្តជិតខាងគឺ(ពីខាងជើងតាមទ្រនិចនាឡិកាវិល)កំពង់ធំកំពង់ចាមកណ្ដាល...
+                អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
+                ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
+                ខេត្តសៀមរាប តាមផ្លូវកូម៉ៃ ឬផ្លូវសាលដី ហ្គោល...
               </p>
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Cambodia/កំពត.jpg" alt="">
+            <div class="col-">
+             <img src="images/Cambodia/កំពត.jpg" alt="">
+            </div>
             <div class="area-description">
               <a class="area-title">កំពត</a>
               <p class="area-short-description">
@@ -153,7 +157,9 @@
             </div>
           </div>
           <div class="area d-flex">
-            <img src="images/Cambodia/បាត់ដំបង.jpg" alt="">
+            <div class="col-">
+              <img src="images/Cambodia/បាត់ដំបង.jpg" alt="">
+            </div>
             <div class="area-description">
               <a class="area-title">បាត់ដំបង</a>
               <p class="area-short-description">
