dark mode reusable class & limit short description

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="dist/fontawesome-free-6.2.0-web/css/all.css">
     <link rel="stylesheet" href="dist/fontawesome-free-6.2.0-web/css/fontawesome.min.css">
-
+    
     <!-- Bootstrap -->
     <link rel="stylesheet" href="dist/bootstrap-5.2.1-dist/css/bootstrap.min.css">
 
     <!-- Style -->
     <link rel='stylesheet' href='./dist/style/style.css'>
     
-    <head>
   </head>
   <body>
     <nav id="menu-navbar">
@@ -100,7 +99,7 @@
           <p class="description">វិស័យទេសចរណ៍នៅកម្ពុជា គឺជាវិស័យដល់សំខាន់បំផុតនៅក្នុងសេដ្ឋកិច្ច របស់កម្ពុជានៅក្នុងឆ្នាំ២០១៣ ការមកដល់ទេសចរណ៍កើនឡើងដល់ ១៧.៥% ពីមួយឆ្នាំទៅមួយឆ្នាំដោយអ្នកធ្វើដំណើរអាជីវកម្មកើនឡើង ៤៧% .....</p>
           <div class="btn-wrapper d-flex mt-3">
             <div class="btn-detail read-more">
-              <a href="readmore.html"><i class="fa-solid fa-book"></i>
+              <a class="text-white" href="readmore.html"><i class="fa-solid fa-book"></i>
               <span>អានបន្ថែម</span></a>
             </div>
             <div class="btn-detail watch-video">
