--- a/readmore.html
+++ b/readmore.html
@@ -167,5 +167,6 @@
     </div>
   </footer>
     <script src="dist/js/script.js"></script>
+    <script src="dist/js/calendar.js"></script>
   </body>
 </html>
