--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
             <div><span>ខេត្ត/តំបន់</span></div>
           </div>
           <div class="area d-flex">
+            <div class="col-">
             <img src="images/Ankor_Wat_temple.jpg" alt="">
+            </div>
             <div class="area-description">
               <a class="area-title">សៀមរាប</a>
               <p class="area-short-description">
