--- a/seemore.html
+++ b/seemore.html
@@ -136,7 +136,9 @@
           </div>
         </div>
         <div class="area col-6 d-flex">
+          <div class="col-">
           <img src="images/Cambodia/កែប.jpg" alt="">
+          </div>
           <div class="area-description">
             <a class="area-title">កែប</a>
             <p class="area-short-description">
@@ -158,7 +160,9 @@
           </div>
         </div>
         <div class="area col-6 d-flex">
+          <div class="col-">
           <img src="images/Cambodia/ព្រះវិហារ.jpg" alt="">
+          </div>
           <div class="area-description">
             <a class="area-title">ព្រះវិហារ</a>
             <p class="area-short-description">
