--- a/seemore.html
+++ b/seemore.html
@@ -89,8 +89,8 @@
       </div>
     </nav>
     <div class="travel-guide-container">
-      <div class="row">
-        <div class="col-12">
+      <div class="row" style="padding-top: 10px;">
+        <div class="head">
           <div><span>ខេត្ត/តំបន់</span></div>
         </div>
         <div class="area col-6 d-flex">
@@ -369,7 +369,7 @@
             </div>
           </div>  
     </div>
-    
+    </div>
     <footer>
       <div class="container">
         <div class="footer-header d-flex justify-content-center align-items-center gap-4 py-4">
