--- a/សៀមរាប.html
+++ b/សៀមរាប.html
@@ -79,7 +79,7 @@
           <div class="img-content-wrap">
             <img class="img-content-post" src="./images/readme-pic.jpg">
             <div class="overlay">
-              <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅកម្ពុជា</p>
+              <p class="title-content-post pt-2">ដំណើរកម្សាន្តនៅក្នុងខេត្តសៀមរាប</p>
             </div>
           </div>
             <p class="text-description">ប្រទេសកម្ពុជា គឺ ជាប្រទេសមួយដែលមានវប្បធម៏ និង អរិយធម៏ចាស់ជាងគេក្នុងទ្វីបអាស៊ីអាគ្នេយ៍។</p>
