--- a/ភ្នំពេញ.html
+++ b/ភ្នំពេញ.html
@@ -105,7 +105,11 @@
             <p class="text-title-readmore">ផ្សារទំនើប</p>
             <img class="img-content-post" src="images/Seemore_photo/វត្តភ្នំ.jpg">
             <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
-        </div>
+            <p class="text-title-readmore">ផ្សារទំនើប</p>
+            <img class="img-content-post" src="images/Seemore_photo/វត្តភ្នំ.jpg">
+            <p class="text-description">មណីដ្ឋាននេះមានភ្ញៀវជាតិ និង អន្តរជាតិចូលមកទស្សនាកម្សាន្តយ៉ាងច្រើន កុះករដើម្បី បានដឹង ទីកេរណ៍ដំណែលនៃមរតករបស់បុព្វបុរសជំនាន់ដើមដែលបានបន្សល់ទុក។​</p>
+        
+          </div>
         <div class="col-lg-3">
           <img src="./images/k_profile.jpg" alt="center" class="side-bar-profile">
         <p class="side-bar-title">Kimnang</p>
